--- a/.github/workflows/fib.yml
+++ b/.github/workflows/fib.yml
@@ -6,12 +6,13 @@ on:
   push:
     branches: [ master ]
     tags:
-      - "ver*.*.*"
+      - '*'
 
 jobs:
   build:
     name: Build and push Docker image
     runs-on: ubuntu-20.04
+
     steps:
     - uses: actions/checkout@v3
 
@@ -20,14 +21,14 @@ jobs:
       uses: docker/metadata-action@v4
       with:
         images: |
-          # ${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci
           ghcr.io/${{ github.repository_owner }}/simple_fibonacci
+
         tags: |
           type=ref,event=branch
+          type=ref,event=pr
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          type=sha
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
@@ -52,11 +53,9 @@ jobs:
       with:
         context: .
         file: Dockerfile
+        cache-from: type=registry,ref=docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:cache
+        cache-to: type=registry,ref=docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:cache
         platforms: linux/amd64,linux/arm64/v8
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: |
-          type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:cache
-        cache-to: |
-          type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:cache
