--- a/.github/workflows/fib.yml
+++ b/.github/workflows/fib.yml
@@ -1,5 +1,4 @@
-
-name: Build and push Fibonacci Docker image
+name: Build and push Docker image
 
 on:
   workflow_dispatch:
@@ -10,52 +9,51 @@ on:
 
 jobs:
   build:
-    name: Build and push Docker image
     runs-on: ubuntu-20.04
-
+    
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ghcr.io/${{ github.repository_owner }}/simple_fibonacci
-
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GHCR_ACCESS_TOKEN }}
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-    - name: Build Docker image
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        file: Dockerfile
-        cache-from: type=registry,ref=docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:cache
-        cache-to: type=registry,ref=docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:cache
-        platforms: linux/amd64,linux/arm64/v8
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+      - uses: actions/checkout@v3
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_ACCESS_TOKEN }}
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/simple_fibonacci
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{ version }}
+            type=semver,pattern={{ major }}.{{ minor }}
+      
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          cache-from: type=registry,ref=docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:buildx-cache
+          cache-to: type=registry,ref=docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/simple_fibonacci:buildx-cache
+          platforms: linux/amd64,linux/arm64
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
