--- a/.github/workflows/fib.yml
+++ b/.github/workflows/fib.yml
@@ -41,7 +41,7 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/simple_fibonacci
           tags: |
             type=ref,event=branch
-            type=ref,event=pr
+            type=sha
             type=semver,pattern={{ version }}
             type=semver,pattern={{ major }}.{{ minor }}
       
