--- a/.github/workflows/fib.yml
+++ b/.github/workflows/fib.yml
@@ -41,9 +41,9 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/simple_fibonacci
           tags: |
             type=ref,event=branch
-            type=sha
-            type=semver,pattern={{ version }}
-            type=semver,pattern={{ major }}.{{ minor }}
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
       
       - name: Build and push
         id: docker_build
