--- a/.github/workflows/fib_dod2.yml
+++ b/.github/workflows/fib_dod2.yml
@@ -43,8 +43,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v3
         with:
-          cache-from: type=registry,ref=hg.ciche-registry.duckdns.org/${{ github.repository_owner }}/simple_fibonacci:buildx-cache
-          cache-to: type=registry,ref=hg.ciche-registry.duckdns.org/${{ github.repository_owner }}/simple_fibonacci:buildx-cache
+          cache-from: type=registry,ref=ciche-registry.duckdns.org/${{ github.repository_owner }}/simple_fibonacci:buildx-cache
+          cache-to: type=registry,ref=ciche-registry.duckdns.org/${{ github.repository_owner }}/simple_fibonacci:buildx-cache
           platforms: linux/amd64,linux/arm64
           context: .
           file: Dockerfile
